Updated description day 18, minor refactoring